Added link to the InfoQ presentation

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 				with an incomplete program, and gradually and iteratively reify the missing parts while catching design and implementation
 				mistakes early.</p>
 
-				<h2>Learn more about Prorogued Programming</h2>
+				<h2>Learn More About Prorogued Programming</h2>
 				<p>
-				To learn more about prorogued programming, come to our 
-				<a href="http://splashcon.org/2012/program/onward-papers">SPLASH Onward! 2012</a> talk and read our paper,
+				To learn more about prorogued programming,
+				<a href="http://www.infoq.com/presentations/Prorogued-Programming">SPLASH Onward! 2012 presentation</a> and read our paper,
 					<a href="paper.pdf" alt="Liberating the Programmer with Prorogued Programming">
 						Liberating the Programmer with Prorogued Programming</a>, and stay tuned! We'll update
 					this page shortly, with links to our prototype implementation of a prorogued programming language,
@@ -25,7 +25,7 @@
 					programming has the potential to change the way people program, but we need your help to get there!
 					
 					<br /><br />
-					<a href="slides.pdf" alt="Prorogue Programming SPLASH Onward! 2012 Slides"><img src="slide.png" width="85%" /></a>
+					<a href="slides.pdf" alt="Prorogued Programming SPLASH Onward! 2012 Slides"><img src="slide.png" width="85%" /></a>
 				</p>
 			</div>
 			<div id="sidebar">
@@ -36,7 +36,7 @@
 					Liberating the Programmer with Prorogued Programming
 				</a></p>
 				<br />
-				<p><a href="slides.pdf" alt="Prorogue Programming SPLASH Onward! 2012 Slides">
+				<p><a href="slides.pdf" alt="Prorogued Programming SPLASH Onward! 2012 Slides">
 					<img src="slide.png" width="200px" />
 					<h3>Presentation Slides</h3>
 					SPLASH Onward! 2012
@@ -51,8 +51,7 @@
 				<br />
 				<h3>Let us know what you think!</h3>
 				<p>
-				We'd love your feedback! Please keep it coming. Make sure you try our prototype implementation which will be
-				available shortly. Of course, poking into the source code and contributing to it is always more than welcome!
+				We'd love your feedback! Please keep it coming.
 				</p>
 				<br />
 				<h3>Spread the word!</h3>
