Added Mehrdad's talk link to the sidebar

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 					Liberating the Programmer with Prorogued Programming
 				</a></p>
 				<br />
+				<p><a href="http://www.infoq.com/presentations/Prorogued-Programming" alt="Prorogued Programming Presentation at SPLASH Onward! 2012">
+					<img src="proroguepresentation.jpg" alt="Mehrdad Afshari presents prorogued programming" width='170px' />
+					<h3>Watch the Presentation</h3>
+					SPLASH Onward! 2012
+				</p>
+				<br />
 				<p><a href="slides.pdf" alt="Prorogued Programming SPLASH Onward! 2012 Slides">
 					<img src="slide.png" width="200px" />
 					<h3>Presentation Slides</h3>
