Changed the link of the big slide to the video, not the slide pdf

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					programming has the potential to change the way people program, but we need your help to get there!
 					
 					<br /><br />
-					<a href="slides.pdf" alt="Prorogued Programming SPLASH Onward! 2012 Slides"><img src="slide.png" width="85%" /></a>
+					<a href="http://www.infoq.com/presentations/Prorogued-Programming" alt="Prorogued Programming Presentation at SPLASH Onward! 2012"><img src="slide.png" width="85%" /></a>
 				</p>
 			</div>
 			<div id="sidebar">
