--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 				To learn more about prorogued programming,
 				<a href="http://www.infoq.com/presentations/Prorogued-Programming">SPLASH Onward! 2012 presentation</a> and read our paper,
 					<a href="paper.pdf" alt="Liberating the Programmer with Prorogued Programming">
-						Liberating the Programmer with Prorogued Programming</a>, and stay tuned! We'll update
-					this page shortly, with links to our prototype implementation of a prorogued programming language,
-					Prorogued C#, including source code. Please hang tight and spread the word! We believe prorogued
-					programming has the potential to change the way people program, but we need your help to get there!
+						Liberating the Programmer with Prorogued Programming</a>.
 					
 					<br /><br />
 					<a href="http://www.infoq.com/presentations/Prorogued-Programming" alt="Prorogued Programming Presentation at SPLASH Onward! 2012"><img src="slide.png" width="85%" /></a>
